# LichtFeld-Studio

./: CMakeLists.txt
.github/workflows/: ubuntu.yml
cmake/: config.h.in
src/app/: converter.cpp  mcp_gui_tools.cpp
src/core/: CMakeLists.txt  argument_parser.cpp  bhatt_lod.cpp  camera.cpp  checkpoint_format.cpp  image_io.cpp  parameters.cpp  scene.cpp  splat_data.cpp  splat_data_transform.cpp  splat_simplify.cpp
src/core/cuda/kernels/: sh_layout.cu
src/core/include/core/: bhatt_lod.hpp  camera.hpp  events.hpp  export.hpp  image_io.hpp  parameters.hpp  scene.hpp  splat_data.hpp  splat_simplify_history.hpp  splat_simplify_types.hpp
src/core/include/core/cuda/: sh_layout.cuh
src/io/: CMakeLists.txt  loader.cpp  loader_service.cpp
src/io/cuda/: kmeans.cu
src/io/formats/: colmap.hpp  rad.cpp  rad.hpp
src/io/include/io/: exporter.hpp  filesystem_utils.hpp  loader.hpp
src/io/loaders/: rad_loader.cpp  rad_loader.hpp
src/python/: CMakeLists.txt  lfs_splat_lod_hierarchy.py  python_runtime.cpp  python_runtime.hpp
src/python/lfs/: module.cpp  py_rendering.cpp  py_rendering.hpp  py_scene.cpp  py_scene.hpp  py_splat_simplify.cpp  py_ui.cpp
src/python/lfs_plugins/: asset_index.py  asset_manager_panel.py  asset_scanner.py  asset_thumbnails.py  depth_view_controls.py  export_panel.py  help_menu.py  histogram_panel.py  rendering_panel.py  toolbar.py  tools.py  viewport_export_controls.py
src/python/lfs_plugins/tool_defs/: builtin.py
src/python/stubs/lichtfeld/: __init__.pyi
src/python/stubs/lichtfeld/ui/: __init__.pyi
src/rendering/: selection_ops.cu  selection_ops.hpp
src/rendering/include/rendering/: render_constants.hpp  rendering.hpp
src/rendering/rasterizer/: CMakeLists.txt
src/rendering/rasterizer/gsplat_fwd/: SphericalHarmonicsCUDA.cu
src/rendering/rasterizer/rasterization/include/: kernel_utils.cuh
src/rendering/rasterizer/vulkan/src/: buffer.cpp  buffer.h  gs_pipeline.cpp  gs_renderer.cpp  gs_renderer.h
src/training/: checkpoint.cpp  dataset.hpp  trainer.cpp  trainer.hpp  training_setup.cpp
src/training/kernels/: grad_alpha.cu
src/training/optimizer/: adam_optimizer.cpp
src/training/rasterization/: fast_rasterizer.cpp
src/training/rasterization/fastgs/optimizer/src/: adam.cu  adam_api.cu
src/training/rasterization/fastgs/rasterization/include/: backward.h  buffer_utils.h  forward.h  kernel_utils.cuh  kernels_backward.cuh  kernels_forward.cuh
src/training/rasterization/fastgs/rasterization/src/: backward.cu  (+2 more)
src/training/rasterization/fastgs/utils/: utils.h
src/training/rasterization/gsplat/: SphericalHarmonicsCUDA.cu
src/training/strategies/: improved_gs_plus.cpp  mcmc.cpp  mrnf.cpp  mrnf.hpp  strategy_utils.cpp
src/visualizer/: CMakeLists.txt  app_store.cpp  gui_capabilities.cpp  visualizer_impl.cpp  visualizer_impl.hpp
src/visualizer/gui/: async_task_manager.cpp  async_task_manager.hpp  gizmo_manager.cpp  gizmo_manager.hpp  gui_manager.cpp  gui_manager.hpp  rml_menu_bar.cpp  rml_menu_bar.hpp  rml_viewport_overlay.cpp  rml_viewport_overlay.hpp  vulkan_ui_texture.cpp
src/visualizer/gui/resources/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  nl.json  pl.json  zh.json
src/visualizer/gui/rmlui/: rml_tooltip.cpp  rmlui_manager.cpp  rmlui_manager.hpp
src/visualizer/gui/rmlui/elements/: scene_graph_element.cpp  scene_graph_element.hpp
src/visualizer/gui/rmlui/resources/: asset_manager.rcss  export_panel.rml  rendering.rml  viewport_overlay.rcss  viewport_overlay.rml  viewport_overlay.theme.rcss
src/visualizer/gui/utils/: file_association.cpp  native_file_dialog.cpp  native_file_dialog.hpp
src/visualizer/include/visualizer/: app_store.hpp
src/visualizer/input/: input_bindings.cpp  input_controller.cpp
src/visualizer/ipc/: render_settings_convert.hpp  view_context.hpp
src/visualizer/operation/: undo_entry.cpp
src/visualizer/operator/: operator.hpp
src/visualizer/operator/ops/: align_ops.hpp  edit_ops.hpp  scene_ops.hpp  selection_ops.hpp  transform_ops.hpp
src/visualizer/rendering/: lod_page_cache.cpp  lod_page_cache.hpp  point_cloud_vulkan_renderer.cpp  point_cloud_vulkan_renderer.hpp  rendering_manager.cpp  rendering_manager.hpp  rendering_manager_viewport.cpp  rendering_manager_vulkan.cpp  rendering_types.hpp  spark_lod_controller.cpp  spark_lod_controller.hpp  viewport_frame_lifecycle_service.cpp  viewport_frame_lifecycle_service.hpp  viewport_request_builder.cpp  vksplat_input_packer.cpp  vksplat_viewport_renderer.cpp  vksplat_viewport_renderer.hpp  vulkan_external_tensor.cpp  vulkan_external_tensor.hpp
src/visualizer/rendering/passes/: vulkan_depth_blit_pass.hpp  vulkan_scene_image_uploader.cpp  vulkan_scene_image_uploader.hpp  vulkan_split_view_pass.hpp  vulkan_viewport_pass.cpp  vulkan_viewport_pass.hpp
src/visualizer/rendering/resources/viewport/: point_cloud.frag  vksplat_compose.comp
src/visualizer/scene/: scene_manager.cpp  scene_manager.hpp
src/visualizer/selection/: selection_service.cpp  selection_service.hpp
src/visualizer/tools/: builtin_tools.cpp
src/visualizer/training/: training_manager.cpp
src/visualizer/window/: vulkan_context.cpp  vulkan_context.hpp  vulkan_image_barrier_tracker.cpp  vulkan_image_barrier_tracker.hpp  vulkan_loader_probe.cpp  vulkan_result.hpp  window_manager.cpp  window_manager.hpp
tests/: CMakeLists.txt  test_argument_parser.cpp  test_background_image.cpp  test_colmap_image_layout.cpp  test_fastgs_analytical_gradients.cpp  test_fastgs_kernels.cpp  test_input_controller_focus.cpp  test_mrnf_strategy.cpp  test_operator_registry_props.cpp  test_python_integration.cpp  test_scene_validity.cpp  test_selection_service_interactions.cpp  test_sh_swizzle_layout.cpp  test_splat_simplify.cpp  test_undo_history.cpp  test_video_export_utils.cpp
tests/python/: test_asset_manager_panel.py  test_histogram_panel.py  test_rendering_panel_localization_regressions.py  test_rendering_panel_regressions.py  test_rendering_panel_simplify.py  test_splat_lod_hierarchy.py  test_tool_registry_activation.py  test_toolbar_hooks.py  test_tools_new.py
(+3 files in other folders)
